<resources>
    <string name="app_name">TestMISU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="special_family">Сімейний лікар</string>
    <string name="special_children">Педіатр</string>
    <string name="special_butcher">Хірург</string>
    <string name="special_penis">Уролог</string>
    <string name="special_pills">Терапевт</string>
    <string name="special_eyes">Окуліст</string>
</resources>