<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestOne">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Лікарі Онлайн"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rcDocs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/special_family"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/special_children"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/special_butcher"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/special_penis"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/special_pills"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/special_eyes"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="16sp" />
            </RadioGroup>
        </HorizontalScrollView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcDocs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>